--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -11,7 +11,7 @@
     "\n",
     "Which of the following statements are true?  \n",
     "**HINT: draw a big Venn Diagram by your side**  \n",
-    "* $P(\\overline{A}) = 0.7$\n",
+    "* $P(\\overline{A}) = 0.7$ \n",
     "* $P(A \\cup B) = 0.6$\n",
     "* $P(A \\cap \\overline{B}) = 0.2$\n",
     "* $P(A \\cup \\overline{A}) = 1$  \n",
@@ -21,14 +21,53 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "\"\"\"\n",
-    "your solution here\n",
-    "\"\"\""
+    "* La probalidad de no A : \n",
+    "$P(\\overline{A}) = 0.7 => TRUE : 1 - P(A) = 1 - 0.3 = 0.7$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* La pobabilidad de  A y B : $P(A \\cup B) = 0.6 => FALSE : P(A) + P(B) - P(A \\cap B ) = 0.3 + 0.6 - (0.1) = 0,8 $"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* La Pobabilidad de A - B : $P(A \\cap \\overline{B}) = 0.2 => TRUE : P(A) - P(A \\cap B) = 0.3 - 0.1 = 0.2  $"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* $P(A \\cup \\overline{A}) = 1 => XXX :  $"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* $P(A \\cap (B \\cup \\overline{B})) = 0.4 => XXX : $\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "** $P(\\overline{A} \\cap \\overline{B}) = 0.3 => TRUE: (1 - P(A)) * (1 - P(B)) = (1-0.3) * (1-0.6) = 0.3 $\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* $P(\\overline{A \\cap B}) = 0.9 => TRUE : P(\\overline{A} \\cup \\overline{B}) = 1 - P(A \\cap B) = 1 - 0.1= 0.9 $"
    ]
   },
   {
@@ -169,7 +208,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.1"
   },
   "toc": {
    "base_numbering": 1,
